# ncps

./: .gitignore  .readthedocs-requirements.txt  .readthedocs.yml  LICENSE  README.md  analysis.Rmd  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-test.yml
docs/: atari_tf.rst  atari_torch.rst  conf.py  index.rst  quickstart.rst
docs/_static/: custom.css
docs/api/: index.rst  tensorflow.rst  torch.rst  wirings.rst
docs/examples/: atari_bc.rst  atari_ppo.rst  atari_tf.rst  atari_torch.rst  index.rst  mujoco_pomdp.rst  tf_first_steps.rst  torch_first_steps.rst
examples/: atari_ppo.py  atari_tf.py  atari_torch.py  bidirectional.py  cfc_high_level.py  cfc_sinusoidal.py  infer_states.py  keras_save.py  pd_example.py  pt_example.py  pt_implicit.py  save_model.py  stacking_ncp.py  torch_cfc_sinusoidal.py
kerasncp/: __init__.py  ltc_cell.py  utils.py
kerasncp/datasets/: __init__.py  icra2020_lidar_collision_avoidance.py
kerasncp/tests/: test_tf.py  test_torch.py
kerasncp/tf/: __init__.py  cfc_cell.py  ltc_cell.py  mm_rnn.py
kerasncp/tf/experimental/: __init__.py  cfc.py  cfc_cell.py  mm_rnn.py
kerasncp/torch/: ltc_cell.py
kerasncp/torch/experimental/: __init__.py  cfc.py  cfc_cell.py
kerasncp/wirings/: __init__.py  wirings.py
ncps/: __init__.py
ncps/datasets/: utils.py
ncps/datasets/tf/: __init__.py  atari_cloning.py
ncps/datasets/torch/: __init__.py  atari_cloning.py
ncps/keras/: __init__.py  cfc.py  cfc_cell.py  ltc.py  ltc_cell.py  mm_rnn.py  wired_cfc_cell.py
ncps/paddle/: __init__.py  ltc_cell.py
ncps/tests/: test_keras.py  test_tf.py  test_torch.py
ncps/tf/: __init__.py  cfc.py  cfc_cell.py  ltc.py  ltc_cell.py  mm_rnn.py  wired_cfc_cell.py
ncps/torch/: __init__.py  cfc.py  cfc_cell.py  lstm.py  ltc.py  ltc_cell.py  wired_cfc_cell.py
ncps/wirings/: __init__.py  wirings.py
reproducibility/: README.md
slaf-project/: arima.ipynb  dataset.py  lnn.ipynb
slaf-project/data/: make_dataset.ipynb
slaf-project/data/parquet/: est_hourly.parquet
