[tool.poetry]
name = "ncps"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
numpy = "<2.0.0"
pytest = "^8.2.2"
torch = "^2.3.1"
# Issue between poetry and tensorflow metadata since >=2.11
# This is a temporary workaround
# related to https://github.com/python-poetry/poetry/issues/8271
# Inspired from https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L148-L162
tensorflow = {version = "^2.16.0,<2.17.0" }
#tensorflow-macos = { version = "^2.16.0,<2.17.0", platform = "darwin", markers = "platform_machine=='arm64'" }
tensorflow-intel = { version = "^2.16.0,<2.17.0", platform = "win32" }
tensorflow-cpu = [
    { version = "^2.16.0,<2.17.0", platform = "linux", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
    { version = "^2.16.0,<2.17.0", platform = "darwin", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" }
]
#tensorflow-cpu-aws = { version = "^2.16.0,<2.17.0", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'" }
# https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L107-L108
# https://github.com/python-poetry/poetry/issues/8271#issuecomment-1697740447
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]
pytorch-lightning = "^2.3.3"
fastparquet = "^2024.5.0"
statsmodels = "^0.14.2"
pytorch-forecasting = "^1.0.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.4"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
fastparquet = "^2024.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
